# subliminal_learning

./: .env.example  .gitattributes  .gitignore  README.md  add_noise.py  align_eval.py  dataset_gen.py  defaultConfigs.py  figures.py  finetune.py  get_preference.py  interp.py  pyproject.toml  subliminal_transfer.py  sweep_hparams.py  utils.py  view_align_eval.py
biases/: Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-bear.pt  Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-cat.pt  Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-dog.pt  Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-dragon.pt  Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-eagle.pt  Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-elephant.pt  Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-lion.pt  Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-owl.pt  Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-steer-bear.pt  Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-steer-cat.pt  Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-steer-dog.pt  Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-steer-dragon.pt  Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-steer-eagle.pt  Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-steer-elephant.pt  Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-steer-lion.pt  Llama-3.1-8B-Instruct-bias-blocks.21.hook_resid_post-steer-owl.pt  gemma-2b-it-bias-blocks.14.hook_resid_post-bear.pt  gemma-2b-it-bias-blocks.14.hook_resid_post-cat.pt  gemma-2b-it-bias-blocks.14.hook_resid_post-dog.pt  (+13 more)
(+607 files in other folders)
